<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question1"
                        android:textColor="@color/black"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fever"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sorethroat"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cough"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/shortbreath"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp"
                        android:background="@color/light_grey">

                        <RadioGroup
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Yes"
                                android:id="@+id/radio_q1_1"/>

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/radio_q1_2"
                                android:text="No"/>

                        </RadioGroup>


                    </LinearLayout>




                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question2"
                        android:textColor="@color/black"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp"
                        android:background="@color/light_grey">

                        <RadioGroup
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Yes"
                                android:id="@+id/radio_q2_1"/>

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/radio_q2_2"
                                android:text="No"/>

                        </RadioGroup>

                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question3"
                        android:textColor="@color/black"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp"
                        android:background="@color/light_grey"
                        >

                        <RadioGroup
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Yes"
                                android:id="@+id/radio_q3_1"/>

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/radio_q3_2"
                                android:text="No"/>

                        </RadioGroup>

                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question4"
                        android:textColor="@color/black"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp"
                        android:background="@color/light_grey"
                        >

                        <RadioGroup
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            >

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Yes"
                                android:id="@+id/radio_q4_1"
                                />

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/radio_q4_2"
                                android:text="No"/>

                        </RadioGroup>

                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    >

                    <Button
                        android:id="@+id/bt_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Cancel"
                        android:layout_marginRight="10dp"
                        />

                    <Button
                        android:id="@+id/bt_submit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Submit"
                        android:background="@drawable/custom_button"
                        android:textColor="@color/white"/>
                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>


